# CuMatMul

./: .gitignore  CMakeLists.txt  README.md
include/: matmul.h
src/: bindings.cpp  matmul.cu
tests/: benchmark.py  benchmarks2.ipynb  results.txt  test.py
